# govbr-cruza-dados

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DATA-LICENSE.md  LICENSE  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  readme.diff
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-04-17T10-23-44-796Z.yml  page-2026-04-17T10-24-24-265Z.yml  page-2026-04-17T10-24-48-425Z.yml  page-2026-04-17T10-27-26-569Z.yml  page-2026-04-17T10-27-39-758Z.yml
deploy/: cruza-goaccess.conf  cruza-goaccess.service  cruza-traffic-digest.service  cruza-traffic-digest.sh  cruza-traffic-digest.timer  cruza-traffic-tail.service  cruza-umami.service  cruza-warm-cache.service  cruza-web.service  fail2ban-recidive.jail.conf  fail2ban-transparenciapb-429.filter.conf  fail2ban-transparenciapb-429.jail.conf  fail2ban-transparenciapb-exploit-paths.filter.conf  fail2ban-transparenciapb-exploit-paths.jail.conf  nginx-cruza-http-only.conf  nginx-cruza.conf  nginx-rate-limit-zones.conf  pg-autotune-pg-dropin.conf  pg-autotune.service  pg-autotune.sh  setup-fail2ban.sh  setup-goaccess.sh  setup-letsencrypt.sh  setup-traffic-digest.sh  setup-umami.sh  setup.sh  ssl-params.conf
docs/: analytics.md  architecture.md  cache.md  deploy.md  dicionario_dados_pb.md  etl-guide.md  etl-incremental-guide.md  glossario.md  mv-guide.md  onboarding.md  ops.md  plano_novas_fontes.md  privacidade.md  queries-guide.md  web-guide.md
etl/: 00_download.py  01_schema.py  02_dominio.py  03_rfb.py  04_pncp.py  06_cpgf.py  (+29 more)
(+407 files in other folders)
